# NdkImage

./: .gitignore  README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/dds/ndkimage/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/android/ndk/: LibJpegUtil.java
app/src/main/java/com/dds/ndkimage/: MainActivity.java  NativeImageUtils.java  PermissionUtil.java  Uri2PathUtil.java
app/src/main/jni/: CMakeLists.txt  jpegcompress.cpp  jpegcompress.h  native-image.cpp  ndk-image.c
app/src/main/jni/jpeg/: jpeglib.h
app/src/main/jni/libjpeg_jni/: turbojpeg-jni.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dds/ndkimage/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libjpeg/: build.gradle
libjpeg/src/androidTest/java/com/dds/libjpeg/: ExampleInstrumentedTest.java
libjpeg/src/main/: AndroidManifest.xml
libjpeg/src/main/java/com/dds/libjpeg/: JpegUtils.java
libjpeg/src/main/jni/: CMakeLists.txt  native-lib.cpp
libjpeg/src/test/java/com/dds/libjpeg/: ExampleUnitTest.java
libpng/: build.gradle
libpng/src/main/: AndroidManifest.xml
libpng/src/main/java/com/dds/libpng/: ImageUtils.java
libpng/src/main/jni/: CMakeLists.txt  native-lib.cpp
libpng/src/main/res/values/: strings.xml
linpng/: build.gradle
linpng/src/androidTest/java/com/dds/linpng/: ExampleInstrumentedTest.java
linpng/src/main/: AndroidManifest.xml
linpng/src/main/jni/: CMakeLists.txt  native-lib.cpp  pngcompress.c  pngcompress.h
linpng/src/main/res/values/: strings.xml
linpng/src/test/java/com/dds/linpng/: ExampleUnitTest.java
test1/: build.gradle
test1/src/main/: AndroidManifest.xml
test1/src/main/java/com/android/ndk/: AlbumUtil.java  ImageNativeUtil.java  ImageTools.java
test1/src/main/java/com/trustmobi/test1/: MainActivity.java
test1/src/main/jni/: Android.mk  Application.mk  jpegcompress.c  jpegcompress.h  ndkimage.c  pngcompress.c  pngcompress.h
test1/src/main/jni/jpeg/: Android.mk  jconfig.h  jconfigint.h  jmemmgr.c  tjbench.c
test1/src/main/jni/jpeg/java/org/libjpegturbo/turbojpeg/: TJLoader.java
test1/src/main/jni/png/: Android.mk  Application.mk
test1/src/main/jniLibs/armeabi/: cjpeg  djpeg  jpegtran  rdjpgcom  tjbench  tjunittest  wrjpgcom
test1/src/main/jniLibs/armeabi-v7a/: cjpeg  djpeg  jpegtran  rdjpgcom  tjbench  tjunittest  wrjpgcom
test1/src/main/res/layout/: activity_main.xml
test2/: Android.mk.bak  CMakeLists.txt  build.gradle
test2/src/main/: AndroidManifest.xml
test2/src/main/java/com/android/ndk/: ImageNativeUtil.java  ImageTools.java
test2/src/main/java/com/trustmobi/test2/: MainActivity.java
test2/src/main/jni/: jpegcompress.c  ndk-image.c  pngcompress.c
test2/src/main/jni/libpng/: Makefile  config.h  config.status  libpng16-config  libpng16.la  libpng16.pc  libtool  png-fix-itxt  png.c  pngfix  pngimage  pnglibconf.c  pnglibconf.h  pnglibconf.out  pngpriv.h  pngstest  pngtest  pngunknown  pngvalid
test2/src/main/jni/libpng/arm/.deps/: arm_init.Plo  filter_neon_intrinsics.Plo
test2/src/main/jni/libpng/contrib/libtests/.deps/: pngimage.Po  pngstest.Po  pngunknown.Po  pngvalid.Po
test2/src/main/jni/libpng/contrib/tools/.deps/: png-fix-itxt.Po  pngfix.Po
test2/src/main/jni/zlib/: Android.mk
test2/src/main/res/layout/: activity_main.xml
